Add all the other stuff I've worked on. @Math-ias, this is your problem now.
 * Arduino library:
https://github.com/garmin/LIDARLite_v3_Arduino_Library
 * Spec sheet:
https://static.garmin.com/pumac/LIDAR_Lite_v3_Operation_Manual_and_Technical_Specifications.pdf

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>org.robockets</groupId>
   <artifactId>lidarlitev3</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <repositories>
+  	<repository>
+  		<id>wpilib</id>
+  		<name>WPILib</name>
+  		<url>http://first.wpi.edu/FRC/roborio/maven/release/</url>
+  	</repository>
+  </repositories>
+  <dependencies>
+  	<dependency>
+  		<groupId>edu.wpi.first.wpilibj</groupId>
+  		<artifactId>wpilibJavaFinal</artifactId>
+  		<version>2016.5.1</version>
+  	</dependency>
+  </dependencies>
 </project>
